concord_macros/tests/trybuild/fail/parser/route/base_url_rejects_invalid_scheme_or_empty_host.rs
use concord_macros::api;

api! {
    client FtpBaseApi {
        base "ftp://example.com"
    }
}

api! {
    client EmptyHostBaseApi {
        base "https://"
    }
}

fn main() {}
